# server/routes/userRoutes.js
@@ -1,6 +1,6 @@
 const {Router } = require('express');
 const { isLoggedIn, isVerified } = require('../middleware/authMiddleware');
-const { getUserProfile, getUserPublicProfile, addReview, getUserJoinedTrips, updateUserProfile,getJoinRequestsOfUser } = require('../controller/userController');
+const { getUserProfile, getUserPublicProfile, addReview, getUserTrips, updateUserProfile } = require('../controller/userController');
 
 const router = Router()
 
@@ -8,12 +8,10 @@ router.get('/profile',isLoggedIn,isVerified,getUserProfile)
 
 router.put('/profile',isLoggedIn,isVerified,updateUserProfile)
 
-router.get('/:id',isLoggedIn,isVerified,getUserPublicProfile)
 
 router.post('/review/add',isLoggedIn,isVerified,addReview)
- 
-router.get('/joined-trips',isLoggedIn,isVerified,getUserJoinedTrips)
 
-router.get('/pending-request-trips',isLoggedIn,isVerified,getJoinRequestsOfUser)
+router.get('/myTrips',isLoggedIn,isVerified,getUserTrips)
+router.get('/:username',isLoggedIn,isVerified,getUserPublicProfile)
 
 module.exports = router;
