# server/swagger-output.json
@@ -600,28 +600,12 @@
         }
       }
     },
-    "/api/v1/user/joined-trips": {
+    "/api/v1/user/my-trips": {
       "get": {
         "description": "",
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/v1/user/pending-request-trips": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
